2006-10-17 Don Scorgie <DonScorgie@Blueyonder.co.uk>

	* doc/TheFuture:
	A few minor updates from the Export stuff below

	* src/MainWindow.py:
	* src/BaseThought.py:
	* src/DrawingThought.py:
	* src/Links.py:
	* src/utils.py:
	* src/Browser.py:
	* src/MMapArea.py:
	* src/ImageThought.py:
	* src/TextThought.py:
	* data/labyrinth-ui.xml:
	* data/labyrinth.glade:
	Implement "Export as Image" in File menu.
	Supports png and jpg.  Whether supported is determined
	based on file extension.  Initial file name comes from
	map title.
	Export dialog is in glade file (need to move glade stuff
	into utils!)
	Not fully finished - spin boxes need hooked up
	Several new methods in all thought classes (update_bbox,
	export, get_max_area)


2006-10-16 Don Scorgie <DonScorgie@Blueyonder.co.uk>

	* src/MMapArea.py:
	When loading, ensure nthoughts > actual thoughts on canvas
	Don't create duplicate thought numbers.  Maybe fix issue #6 (possibly)

	* src/DrawingThought.py:
	Don't draw multiple copies of drawings when saved / loaded

	* src/MainWindow.py:
	Fix maximised restore across 2 saves

	Merge of "Further Info" personal branch.  This is an
	experiment into adding a "More Info" text area to the
	bottom of Map windows (when the user requests it).
	It also includes several other minor features.
	These are outlined below (main stuff described
	below all entries).  Sorry for the long entry
	* doc/TheFuture:
	Updated what's done.  Added new "non-feature" section
	
	* src/MainWindow.py:
	Save and restore maximised state of windows
	Remove old "number_windows" function
	* src/BaseThought.py:
	* src/DrawingThought.py:
	* src/TextBufferMarkup.py:
	* src/Browser.py:
	Don't display window.  Let window display itself
	* src/MMapArea.py:
	* src/ImageThought.py:
	* src/TextThought.py:
	* data/labyrinth-ui.xml:
	Add "Drawing Mode" and "Add Image" to Mode menu
	(All): Add "more info" option to Mode menu.  When selected,
	add a text entry to bottom of window (resizeable) to add further